--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="http://js.arcgis.com/3.14/esri/css/esri.css">
-  <script src="http://js.arcgis.com/3.14/"></script>
-    <title></title>
-</head>
-<body>
+  <link rel="stylesheet" href="http://js.arcgis.com/3.14/dijit/themes/claro/claro.css">
+  <script src="http://js.arcgis.com/3.6/"></script>
+  <script src="js/modules.js"></script>
+  <!--style for the map-->
+  <style>
+    html, body, #mapDiv {
+      padding: 0;
+      margin: 0;
+      height: 100%;
 
+    }
+  </style>
+  <!--title-->
+    <title>Sample map</title>
+  <!--head-->
+</head>
+
+<body class="claro">
+<!--map-->
+      <div id="mapDiv"></div>
 </body>
 </html>
